hphp/test/zend/bad/ext/standard/tests/file/fopen_variation1.php
<?php

$file = basename(__FILE__);

$fd = fopen($file, "r", true);
var_dump($fd);
fclose($fd);

?>